--- a/public/lib/umeditor/dialogs/formula/formula.html
+++ b/public/lib/umeditor/dialogs/formula/formula.html
@@ -32,7 +32,7 @@
     <input id="blurHelper" />
 </div>
 
-<script src="../../../jquery.min.js"></script>
+<script src="../../third-party/jquery.min.js"></script>
 <script src="../../third-party/mathquill/mathquill.js"></script>
 <script>
     $(function(){
