--- a/app/ui/common/ueditor/dialogs/attachment/attachment.html
+++ b/app/ui/common/ueditor/dialogs/attachment/attachment.html
@@ -1,126 +1,117 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
 <html>
 <head>
-    <title></title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <meta charset="UTF-8">
+    <title>ueditor图片对话框</title>
     <script type="text/javascript" src="../internal.js"></script>
-    <link rel="stylesheet" type="text/css" href="attachment.css"/>
+
+    <!-- jquery -->
+    <script type="text/javascript" src="../../../jquery-1.11.0.min.js"></script>
+
+    <!-- webuploader -->
+    <script src="../../third-party/webuploader/webuploader.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../third-party/webuploader/webuploader.css">
+
+    <!-- iCMS file -->
+    <link rel="stylesheet" href="../../../bootstrap/2.3.2/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="../../../iCMS-6.0.0.css" type="text/css" />
+
+    <!-- attachment dialog -->
+    <link rel="stylesheet" href="attachment.css" type="text/css" />
 </head>
 <body>
-<div class="wrapper">
-    <div class="controller">
-        <!--<span id="divStatus"></span>-->
-        <span id="spanButtonPlaceHolder"></span>
+
+    <div class="wrapper">
+        <div id="tabhead" class="tabhead">
+            <span class="tab focus" data-content-id="upload"><var id="lang_tab_upload"></var></span>
+            <span class="tab" data-content-id="online"><var id="lang_tab_online"></var></span>
+        </div>
+        <div id="tabbody" class="tabbody">
+            <!-- 上传图片 -->
+            <div id="upload" class="panel focus">
+                <div id="queueList" class="queueList">
+                    <div class="statusBar element-invisible">
+                        <div class="progress">
+                            <span class="text">0%</span>
+                            <span class="percentage"></span>
+                        </div><div class="info"></div>
+                        <div class="btns">
+                            <div id="filePickerBtn"></div>
+                            <div class="uploadBtn"><var id="lang_start_upload"></var></div>
+                        </div>
+                    </div>
+                    <div id="dndArea" class="placeholder">
+                        <div class="filePickerContainer">
+                            <div id="filePickerReady"></div>
+                        </div>
+                    </div>
+                    <ul class="filelist element-invisible">
+                        <li id="filePickerBlock" class="filePickerBlock"></li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- 在线图片 -->
+            <div id="online" class="panel">
+                <div id="fileList"><var id="lang_imgLoading"></var></div>
+            </div>
+
+        </div>
     </div>
-    <div class="fieldset flash" id="fsUploadProgress"></div>
-    <span id="startUpload" style="display: none;"></span>
+    <script id="explorer" type="text/html">
+      <div class="widget-box widget-plain" id="files-explorer">
+        <div class="widget-title">
+          <h5 class="brs">文件管理</h5>
+            <span class="label label-info pwd"><a href="{{URI}}{{parent}}" class="getdir">iCMS://{{pwd}}</a></span>
+            <div class="buttons">
+            <a href="javascript:;" class="btn btn-mini btn-success" id="refresh"><i class="icon-refresh icon-white"></i> 刷新</a></div>
+        </div>
+        <div class="widget-content nopadding">
+            {{ if DirArray }}
+            <table class="table table-bordered table-condensed table-hover">
+              <tbody>
+                <tr>
+                  <td><a href="{{URI}}{{parent}}" class="getdir"><i class="icon-arrow-up"></i> 返回上级目录</a></td>
+                </tr>
+                {{each DirArray}}
+                <tr>
+                  <td><a href="{{$value.url}}" class="getdir dir">{{$value.name}}</a></td>
+                </tr>
+                {{/each}}
+              </tbody>
+            </table>
+            {{/if}}
+            {{ if FileArray }}
+            <table class="table table-bordered table-condensed table-hover">
+              <thead>
+                <tr>
+                  <th><i class="icon-resize-vertical"></i></th>
+                  <th style="width:300px;">文件名(点击文件图标可查看图片)</th>
+                  <th>大小</th>
+                  <th>最后修改时间</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{each FileArray}}
+                <tr>
+                  <td><input type="checkbox" class="url" value="{{$value.url}}" /></td>
+                  <td>
+                      <a href="{{$value.url}}"  target="_blank" title="点击查看图片"><img src="../../../../../admincp/ui/fileicons/{{$value.ext}}.gif" /></a>
+                      <a href="{{$value.url}}" class="file">{{$value.name}}</a>
+                  </td>
+                  <td>{{$value.size}}</td>
+                  <td>{{$value.modified}}</td>
+                </tr>
+                {{/each}}
+              </tbody>
+            </table>
+            {{/if}}
+        </div>
+      </div>
+    </script>
+    <script type="text/javascript" src="../../../template-3.0.js"></script>
 
-</div>
-
-<script type="text/javascript" src="../../third-party/swfupload/swfupload.js"></script>
-<script type="text/javascript" src="../../third-party/swfupload/swfupload.queue.js"></script>
-<script type="text/javascript" src="../../third-party/swfupload/fileprogress.js"></script>
-<script type="text/javascript" src="callbacks.js"></script>
-<script type="text/javascript" src="fileTypeMaps.js"></script>
-<script type="text/javascript">
-    var swfupload,
-        filesList=[];
-    editor.setOpt({
-        fileFieldName:"upfile"
-    });
-    window.onload = function () {
-        var settings = {
-            upload_url:editor.options.fileUrl,           //附件上传服务器地址
-            file_post_name:editor.options.fileFieldName,      //向后台提交的表单名
-            flash_url:"../../third-party/swfupload/swfupload.swf",
-            flash9_url:"../../third-party/swfupload/swfupload_fp9.swf",
-            post_params:{"PHPSESSID":"<?php echo session_id(); ?>","fileNameFormat": editor.options.fileNameFormat}, //解决session丢失问题
-            file_size_limit:"100 MB",                                 //文件大小限制，此处仅是前端flash选择时候的限制，具体还需要和后端结合判断
-            file_types:editor.options.fileTypes,						//允许的扩展名，多个扩展名之间用分号隔开，支持*通配符
-            file_types_description:"All Files",                      //扩展名描述
-            file_upload_limit:100,                                   //单次可同时上传的文件数目
-            file_queue_limit:10,                                      //队列中可同时上传的文件数目
-            custom_settings:{                                         //自定义设置，用户可在此向服务器传递自定义变量
-                progressTarget:"fsUploadProgress",
-                startUploadId:"startUpload"
-            },
-            debug:false,
-
-            // 按钮设置
-            button_image_url:"../../themes/default/images/filescan.png",
-            button_width:"100",
-            button_height:"25",
-            button_placeholder_id:"spanButtonPlaceHolder",
-            button_text:'<span class="theFont">'+lang.browseFiles+'</span>',
-            button_text_style:".theFont { font-size:14px;}",
-            button_text_left_padding:10,
-            button_text_top_padding:4,
-
-            // 所有回调函数 in handlersplugin.js
-            swfupload_preload_handler:preLoad,
-            swfupload_load_failed_handler:loadFailed,
-            file_queued_handler:fileQueued,
-            file_queue_error_handler:fileQueueError,
-            //选择文件完成回调
-            file_dialog_complete_handler:function(numFilesSelected, numFilesQueued) {
-                var me = this;        //此处的this是swfupload对象
-                if (numFilesQueued > 0) {
-                    dialog.buttons[0].setDisabled(true);
-                    var start = $G(this.customSettings.startUploadId);
-                    start.style.display = "";
-                    start.onclick = function(){
-                        me.startUpload();
-                        start.style.display = "none";
-                    }
-                }
-            },
-            upload_start_handler:uploadStart,
-            upload_progress_handler:uploadProgress,
-            upload_error_handler:uploadError,
-            upload_success_handler:function (file, serverData) {
-                try{
-                    var info = eval("("+serverData+")");
-                }catch(e){}
-                var progress = new FileProgress(file, this.customSettings.progressTarget);
-                if(info.state=="SUCCESS"){
-                    progress.setComplete();
-                    progress.setStatus("<span style='color: #0b0;font-weight: bold'>"+lang.uploadSuccess+"</span>");
-                    filesList.push({url:info.url,type:info.fileType,original:info.original});
-                    progress.toggleCancel(true,this,lang.delSuccessFile);
-                }else{
-                    progress.setError();
-                    progress.setStatus(info.state);
-                    progress.toggleCancel(true,this,lang.delFailSaveFile);
-                }
-
-            },
-            //上传完成回调
-            upload_complete_handler:uploadComplete,
-            //队列完成回调
-            queue_complete_handler:function(numFilesUploaded){
-                dialog.buttons[0].setDisabled(false);
-//                var status = $G("divStatus");
-//                var num = status.innerHTML.match(/\d+/g);
-//                status.innerHTML = ((num && num[0] ?parseInt(num[0]):0) + numFilesUploaded) +lang.statusPrompt;
-            }
-        };
-        swfupload = new SWFUpload( settings );
-        //点击OK按钮
-        dialog.onok = function(){
-            var map = fileTypeMaps,
-                str="";
-            for(var i=0,ci;ci=filesList[i++];){
-                str += "<p class='attachment icon_"+ci.type+"'><a href='"+editor.options.filePath + ci.url+"' target='_blank'>" + ci.original + "</a></p>";
-            }
-            editor.execCommand("insertHTML",str);
-            swfupload.destroy();
-        };
-        dialog.oncancel = function(){
-            swfupload.destroy();
-        }
-    };
-</script>
+    <script type="text/javascript" src="attachment.js"></script>
 
 </body>
 </html>
